# smart-doc

./: Cargo.toml  README.md  start.sh
doc/: PROJECT_SUMMARY.md  detailed_development_plan.md  getting_started.md  personal_project_plan.md  quick_start.md  task_timeline.md  technical_implementation.md
examples/: README.md  basic_data.json  basic_template.txt  basic_usage.rs  config.yaml  sample_data.json  simple_template.txt  test_examples.sh
learning_notes/: 2026-03_week_13.md  2026-03_week_14.md  AUTO_GENERATE_EXAMPLE.md  LEARNING_NOTES_SUMMARY.md  README.md  create_weekly_note.sh  weekly_goal_template.md
src/: error.rs  lib.rs
src/cli/: mod.rs
src/core/: document.rs  generator.rs  mod.rs  style.rs
src/formatters/: mod.rs
src/formatters/docx/: mod.rs  zip_builder.rs
src/xml/: mod.rs  namespaces.rs  types.rs  writer.rs
tests/: basic_tests.rs
